--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         "php" : ">=5.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.7.*"
+        "phpunit/phpunit": "4.8.*"
     },
     "autoload": {
-        "psr-0": {
-            "StrGen": "src/"
+        "psr-4": {
+            "StrGen\\": "src/"
         }
     }
 }
