--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,17 @@
         {
             "name": "Chris Kankiewicz",
             "email": "Chris@ChrisKankiewicz.com",
-            "homepage": "http://www.chriskankiewicz.com"
+            "homepage": "https://www.ChrisKankiewicz.com"
         }
     ],
     "support": {
-        "email": "chris@chriskankiewicz.com"
+        "issues": "https://github.com/PHLAK/strgen/issues"
     },
     "require": {
-        "php" : ">=5.5.0"
+        "php" : ">=5.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.8.*"
+        "phpunit/phpunit": "^4.8"
     },
     "autoload": {
         "psr-4": {
