--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
-language: php
 sudo: false
-install: composer install --dev
+
+language: php
 php:
+    - 5.4
     - 5.5
     - 5.6
     - 7.0
+
+cache:
+    directories:
+        - $HOME/.composer/cache
+
+before_install: phpenv config-rm xdebug.ini
+
+install: composer install
