Moved source into src/StrGen directory to better reflect namespacing

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "autoload": {
         "psr-4": {
-            "StrGen\\": "src/"
+            "StrGen\\": "src/StrGen/"
         }
     }
 }
