--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ php:
     - 7.0
     - 7.1
     - 7.2
+    - nightly
+
+matrix:
+    allow_failures:
+        - php: nightly
 
 cache:
     directories:
