--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,17 @@
         "php" : ">=5.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^5.7 || ^6.5",
         "friendsofphp/php-cs-fixer": "^2.3"
     },
     "autoload": {
         "psr-4": {
             "PHLAK\\StrGen\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "PHLAK\\StrGen\\Tests\\": "tests/"
         }
     }
 }
