--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,9 @@
         "psr-4": {
             "PHLAK\\StrGen\\Tests\\": "tests/"
         }
+    },
+    "config": {
+        "sort-packages": true,
+        "optimize-autoloader": true
     }
 }
