--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php" : ">=7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0 || ^7.0",
+        "phpunit/phpunit": "^6.0 || ^7.0 || ^8.0",
         "friendsofphp/php-cs-fixer": "^2.3"
     },
     "autoload": {
