--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,14 +3,9 @@ updates:
 - package-ecosystem: composer
   directory: "/"
   schedule:
-    interval: weekly
-    day: tuesday
+    interval: monthly
     time: "04:00"
     timezone: US/Arizona
   open-pull-requests-limit: 10
   assignees:
   - PHLAK
-  ignore:
-  - dependency-name: phpunit/phpunit
-    versions:
-    - "> 7.0"
