--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
         "issues": "https://github.com/PHLAK/StrGen/issues"
     },
     "require": {
-        "php" : ">=7.0"
+        "php": ">=7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0 || ^7.0 || ^8.0",
-        "friendsofphp/php-cs-fixer": "^2.3"
+        "friendsofphp/php-cs-fixer": "^2.3",
+        "yoast/phpunit-polyfills": "^0.2.0"
     },
     "autoload": {
         "psr-4": {
