--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php": ">=7.2"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.3",
+        "phlak/coding-standards": "^1.2",
         "yoast/phpunit-polyfills": "^0.2.0"
     },
     "autoload": {
